--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cron: ^0.6.0
   provider: ^6.0.0
   shared_preferences: ^2.2.3
+  watch_it: ^1.4.2
 
 dev_dependencies:
   integration_test:
