--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   watch_it: ^1.4.2
 
 dev_dependencies:
+  fake_async: ^1.3.1
   flutter_driver:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
