--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -6,4 +6,4 @@ org.gradle.jvmargs=-Xmx4G -XX:MaxNewSize=3G -XX:+UseParallelGC
 org.gradle.parallel=true
 android.useAndroidX=true
 android.enableJetifier=true
-android.aapt2FromMavenOverride=/mnt/sdk/android-sdk/build-tools/34.0.0/aapt2
+# android.aapt2FromMavenOverride=/mnt/sdk/android-sdk/build-tools/34.0.0/aapt2
