--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.3.0+11
 
 environment:
+  flutter: 3.27.4
   sdk: '>=3.3.2 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
