ignore android build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,9 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
+# android
+/android/.gradle
+/android/.kotlin
 # Android Studio will place build artifacts here
 /android/app/debug
 /android/app/profile
