--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cron: ^0.6.0
   flutter_background_service: ^5.1.0
   shared_preferences: ^2.5.2
+  url_launcher: ^6.3.2
   watch_it: ^1.6.5
 
 dev_dependencies:
