--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   auto_size_text: ^3.0.0
   clock: ^1.1.1
   cron: ^0.6.0
+  dartx: ^1.2.0
   flutter_background_service: ^5.1.0
   settings_ui: ^2.0.2
   shared_preferences: ^2.5.2
