add olivetree for ios

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -32,6 +32,7 @@
 	<true/>
   <key>LSApplicationQueriesSchemes</key>
   <array>
+    <string>olivetree</string>
     <string>youversion</string>
   </array>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
