--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -33,6 +33,7 @@
   <key>LSApplicationQueriesSchemes</key>
   <array>
     <string>olivetree</string>
+    <string>wdbible</string>
     <string>youversion</string>
   </array>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
