--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -32,6 +32,7 @@
 	<true/>
   <key>LSApplicationQueriesSchemes</key>
   <array>
+    <string>blb</string>
     <string>olivetree</string>
     <string>wdbible</string>
     <string>youversion</string>
