--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  app_install_events: ^0.0.3
   auto_size_text: ^3.0.0
   clock: ^1.1.1
   cron: ^0.6.0
