--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   clock: ^1.1.1
   cron: ^0.6.0
   dartx: ^1.2.0
+  package_info_plus: ^8.3.0
   shared_preferences: ^2.5.2
   url_launcher: ^6.3.2
   watch_it: ^1.6.5
