--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,18 +37,21 @@ dependencies:
   clock: ^1.1.1
   cron: ^0.6.0
   dartx: ^1.2.0
+  injectable: ^2.5.1
   package_info_plus: ^8.3.0
   shared_preferences: ^2.5.2
   url_launcher: ^6.3.2
   watch_it: ^1.6.5
 
 dev_dependencies:
+  build_runner: ^2.4.0
   fake_async: ^1.3.1
   flutter_driver:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
+  injectable_generator: ^2.7.0
   integration_test:
     sdk: flutter
   mocktail: ^1.0.4
