--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -31,6 +31,7 @@ if(project.hasProperty("signing") && new File(project.property("signing") + ".gr
 android {
     namespace "com.me2christ.bible_feed"
     compileSdk 36
+    ndkVersion '27.0.12077973'
 
     aaptOptions {
         cruncherEnabled = false // fix fdroid reproducible build errors
