--- a/android/Gemfile
+++ b/android/Gemfile
@@ -1,7 +1,7 @@
 source 'https://rubygems.org'
 
 gem 'fastlane'
-gem 'cocoapods'
+# gem 'cocoapods'
 # gem "abbrev" # needed for ruby 3.4 https://github.com/fastlane/fastlane/issues/21942
 # gem 'cocoapods-user-defined-build-types'
 
