--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -26,6 +26,7 @@ Flutter/flutter_assets/
 Flutter/flutter_export_environment.sh
 ServiceDefinitions.json
 Runner/GeneratedPluginRegistrant.*
+/fastlane/preview.html
 /fastlane/report.xml
 
 # Exceptions to above rules.
