--- a/fastlane/Gemfile
+++ b/fastlane/Gemfile
@@ -5,5 +5,5 @@ gem 'fastlane'
 # gem "abbrev" # needed for ruby 3.4 https://github.com/fastlane/fastlane/issues/21942
 # gem 'cocoapods-user-defined-build-types'
 
-plugins_path = File.join(File.dirname(__FILE__), 'fastlane', 'Pluginfile')
+plugins_path = File.join(File.dirname(__FILE__), '.', 'Pluginfile')
 eval_gemfile(plugins_path) if File.exist?(plugins_path)
