--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dev_dependencies:
   parameterized_test: ^2.0.1
   plugin_platform_interface: ^2.1.8
   url_launcher_platform_interface: ^2.3.2
+  yaml: ^3.1.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
