--- a/build.yaml
+++ b/build.yaml
@@ -20,3 +20,9 @@ targets:
             - lib/service/*.dart
             - test/*.dart
             - integration_test/injectable.dart
+      mockito:mockBuilder:
+        enabled: true
+        generate_for:
+          include:
+            - test/model/*.dart
+            - test/service/*.dart
