--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -15,5 +15,6 @@ linter:
     prefer_const_constructors: true
     prefer_const_literals_to_create_immutables: true
     prefer_final_fields: true
+    prefer_relative_imports: true
     unnecessary_breaks: true
     use_key_in_widget_constructors: false
