--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   auto_size_text: ^3.0.0
   clock: ^1.1.1
   dartx: ^1.2.0
+  df_log: ^0.3.27
   haptic_feedback: ^0.5.1+1
   injectable: ^2.5.1
   package_info_plus: ^8.3.0
