--- a/build.yaml
+++ b/build.yaml
@@ -24,5 +24,5 @@ targets:
         enabled: true
         generate_for:
           include:
-            - test/model/*.dart
-            - test/service/*.dart
+            - test/model*/*.dart
+            - test/service*/*.dart
