--- a/build.yaml
+++ b/build.yaml
@@ -18,7 +18,8 @@ targets:
             - lib/injectable.dart
             - lib/model*/*.dart
             - lib/service*/*.dart
-            - test/screenshot/*.dart
+            - test/screenshot/injectable.dart
+            - test/screenshot/*.stub/*.dart
             - integration_test/injectable.dart
       mockito:mockBuilder:
         enabled: true
