--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
 dev_dependencies:
   alchemist: ^0.12.1
   build_runner: ^2.7.0
+  dart_code_linter: ^3.1.1
   flutter_driver:
     sdk: flutter
   flutter_launcher_icons: ^0.14.0
