--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -23,14 +23,14 @@ dart_code_linter:
     - avoid-unrelated-type-assertions
     - avoid-unused-parameters
     - avoid-nested-conditional-expressions
-    - newline-before-return
+    # - newline-before-return
     - no-boolean-literal-compare
     - no-empty-block
     - prefer-trailing-comma
     - prefer-conditional-expressions
     - no-equal-then-else
-    - prefer-moving-to-variable
-    - prefer-match-file-name
+    # - prefer-moving-to-variable
+    # - prefer-match-file-name
 
 formatter:
   page_width: 120
