fix lint: late keyword

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -16,6 +16,7 @@ dart_code_linter:
     - test/**
   rules:
     - avoid-dynamic
+    - avoid-late-keyword
     - avoid-passing-async-when-sync-expected
     - avoid-redundant-async
     - avoid-unnecessary-type-assertions
