--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,8 +4,8 @@ analyzer:
   exclude:
     - '**.config.dart'
     - '**.mocks.dart'
-  plugins:
-    - dart_code_linter
+  # plugins:
+  #   - dart_code_linter # uses too many resources on M1 Air base model!
 
 dart_code_linter:
   extends:
