--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -21,9 +21,22 @@ dart_code_linter:
   rules:
     # - arguments-ordering
     - avoid-dynamic
+    - avoid-cascade-after-if-null
+    - avoid-collection-methods-with-unrelated-types
+    - avoid-double-slash-imports
+    - avoid-duplicate-exports
+    - avoid-dynamic
+    - avoid-global-state
+    # - avoid-ignoring-return-values
     - avoid-late-keyword
+    - avoid-missing-enum-constant-in-map
+    - avoid-nested-conditional-expressions
+    - avoid-non-ascii-symbols
+    - avoid-non-null-assertion
     # - avoid-passing-async-when-sync-expected
     - avoid-redundant-async
+    - avoid-throw-in-catch-block
+    - avoid-top-level-members-in-tests
     - avoid-unnecessary-type-assertions
     - avoid-unnecessary-type-casts
     - avoid-unrelated-type-assertions
