--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dev_dependencies:
   alchemist: ^0.12.1
   build_runner: ^2.7.0
   dart_code_linter: ^3.1.1
-  fake_async: ^1.3.3
+  fake_async: ^1.3.3 # to advance timer in unit test
   flutter_driver:
     sdk: flutter
   flutter_launcher_icons: ^0.14.0
