--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   app_install_events: ^0.0.3
   auto_size_text: ^3.0.0
+  collection: ^1.19.1
   dartx: ^1.2.0
   df_log: ^0.3.27
   haptic_feedback: ^0.5.1+1
