--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,20 +31,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  app_install_events: ^0.0.3
+  app_install_events: ^0.0.3 # to detect bible reader (un)install
   auto_size_text: ^3.0.0
   collection: ^1.19.1
   dartx: ^1.2.0
   df_log: ^0.3.27
   haptic_feedback: ^0.5.1+1
-  injectable: ^2.5.1
+  injectable: ^2.5.1 # dependency injection
   package_info_plus: ^8.3.0
   shared_preferences: ^2.5.2
-  url_launcher: ^6.3.2
-  watch_it: ^1.6.5
+  url_launcher: ^6.3.2 # to launch bible reader deeplinks
+  watch_it: ^1.6.5 # state management and service locator
 
 dev_dependencies:
-  alchemist: ^0.12.1
+  alchemist: ^0.12.1 # to generate screenshots
   build_runner: ^2.7.0
   dart_code_linter: ^3.1.1
   fake_async: ^1.3.3 # to advance timer in unit test
@@ -54,13 +54,13 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
-  injectable_generator: ^2.8.1
+  injectable_generator: ^2.8.1 # dependency injection
   integration_test:
     sdk: flutter
-  lakos: ^2.0.6
+  lakos: ^2.0.6 # to generate class diagrams
   mockito: ^5.5.0
   parameterized_test: ^2.0.1
-  yaml: ^3.1.3
+  yaml: ^3.1.3 # to read app version for screenshot
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
