--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: run unit tests
+name: run tests
 
 on:
   push:
@@ -12,10 +12,15 @@ on:
 
 jobs:
   flutter_test:
-    runs-on: ubuntu-latest
+    runs-on: macOS-latest
     steps:
       - name: checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - name: install and start simulator
+        uses: futureware-tech/simulator-action@v4
+        with:
+          model: 'iPhone 16'
 
       - name: set up flutter
         uses: subosito/flutter-action@v2
@@ -27,3 +32,6 @@ jobs:
 
       - name: run unit tests
         run: flutter test test/unit
+
+      - name: run integration tests
+        run: flutter test integration_test
