add dart mappable

--- a/build.yaml
+++ b/build.yaml
@@ -11,6 +11,13 @@ targets:
     builders:
       # Sometimes the package name does not match the builder name.
       # In such case, refer to builder by {package_name}:{builder_key}.
+      #
+      # dart_mappable:dart_mappable_builder:
+      dart_mappable_builder:
+        enabled: true
+        generate_for:
+          include:
+            - lib/model/*.dart
       injectable_generator:injectable_builder:
         enabled: true
         generate_for:
