--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   app_install_events: ^0.0.3 # to detect bible reader (un)install
   auto_size_text: ^3.0.0
   collection: ^1.19.1
+  dart_mappable: ^4.6.0
   dartx: ^1.2.0
   df_log: ^0.3.27
   haptic_feedback: ^0.5.1+1
@@ -47,6 +48,7 @@ dev_dependencies:
   alchemist: ^0.12.1 # to generate screenshots
   build_runner: ^2.7.0
   dart_code_linter: ^3.1.1
+  dart_mappable_builder: ^4.6.0
   fake_async: ^1.3.3 # to advance timer in unit test
   flutter_driver:
     sdk: flutter
