add mobile scanner

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -4,5 +4,9 @@ org.gradle.configureondemand=false
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx4G -XX:MaxNewSize=3G -XX:+UseParallelGC
 org.gradle.parallel=true
+
 android.useAndroidX=true
 android.enableJetifier=true
+
+# prevent release apk bloat
+dev.steenbakker.mobile_scanner.useUnbundled=true
