--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   df_log: ^0.3.27
   haptic_feedback: ^0.5.1+1
   injectable: ^2.5.1 # dependency injection
+  mobile_scanner: ^4.0.1
   package_info_plus: ^8.3.0
   shared_preferences: ^2.5.2
   url_launcher: ^6.3.2 # to launch bible reader deeplinks
