--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,9 @@ dependencies:
   dart_mappable: ^4.6.0
   dartx: ^1.2.0
   df_log: ^0.3.27
+  flutter_zxing: ^2.2.1 # for sync
   haptic_feedback: ^0.5.1+1
   injectable: ^2.5.1 # dependency injection
-  mobile_scanner: ^4.0.1
   package_info_plus: ^8.3.0
   shared_preferences: ^2.5.2
   url_launcher: ^6.3.2 # to launch bible reader deeplinks
@@ -49,7 +49,7 @@ dev_dependencies:
   alchemist: ^0.12.1 # to generate screenshots
   build_runner: ^2.7.0
   dart_code_linter: ^3.1.1
-  dart_mappable_builder: ^4.6.0
+  dart_mappable_builder: ^4.6.0 # for sync
   fake_async: ^1.3.3 # to advance timer in unit test
   flutter_driver:
     sdk: flutter
