--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   df_log: ^0.3.27
   flutter_zxing: ^2.2.1 # for sync
   haptic_feedback: ^0.5.1+1
+  image: ^4.5.4 # for sync
   injectable: ^2.5.1 # dependency injection
   package_info_plus: ^8.3.0
   shared_preferences: ^2.5.2
