--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   haptic_feedback: ^0.5.1+1
   image: ^4.5.4 # for sync
   injectable: ^2.5.1 # dependency injection
+  mobile_scanner: ^7.1.3 # for sync
   package_info_plus: ^8.3.0
   shared_preferences: ^2.5.2
   url_launcher: ^6.3.2 # to launch bible reader deeplinks
