--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   dart_mappable: ^4.6.0
   dartx: ^1.2.0
   df_log: ^0.3.27
+  fluttertoast: ^9.0.0
   haptic_feedback: ^0.5.1+1
   injectable: ^2.5.1 # dependency injection
   mobile_scanner: ^7.1.3 # for sync
