--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,6 +41,7 @@
     <string>https</string>
     <string>logosref</string>
     <string>olivetree</string>
+    <string>openbible</string>
     <string>wdbible</string>
     <string>youversion</string>
   </array>
